# podcast-entertain-creator

./: .env.example  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
app/: config.py  crypto.py  db.py  line_helpers.py  main.py  models.py  reply_utils.py  state_machine.py
app/api/: deps.py  export.py  feedback.py  projects.py  rate_limit.py  scripts.py  settings.py  titles.py  tts.py
app/handlers/: __init__.py  export.py  feedback.py  onboarding.py  script.py  title.py  tts.py
app/llm/: base.py  claude_provider.py  factory.py  gemini_provider.py  prompt_builder.py
app/tts/: audio_storage.py  base.py  cloud_tts_provider.py  factory.py  gemini_tts_provider.py  ssml_builder.py  text_preprocessor.py  tts_service.py
docs/: Podcast節目結構模板.md  data-persistence.md  gcp-deployment.md  gcp-setup.md  implementation_plan.md  podcast_spec_v4.docx  script-editor-三層十段-design.html  script-editor-三層十段-plan.md  web-ui-redesign-plan.md
docs/designtoken/: index_v1.html  podcast-creator-design-system.md
docs/user-manual/: user-manual.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: BottomBar.vue  LoadingOverlay.vue  ToastNotification.vue  TopBar.vue
frontend/src/composables/: useApi.js  (+1 more)
prompts/: script_generation.txt  script_refinement.txt  system.txt  title_generation.txt
scripts/: gcp-deploy.sh  gcp-setup.sh
tests/: conftest.py  test_db.py  test_llm_providers.py  test_prompt_builder.py  test_ssml_builder.py  test_state_machine.py  test_tts_providers.py  test_webhook.py
(+33 files in other folders)
