[project]
name = "podcast-entertain-creator"
version = "0.2.0"
description = "Web UI for AI-assisted Podcast content creation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.42",
    "google-genai>=1.0",
    "google-cloud-texttospeech>=2.22",
    "aiohttp>=3.10",
    "cryptography>=43.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
